updated directory to not be relative

--- a/togglModule.ini
+++ b/togglModule.ini
@@ -1,6 +1,6 @@
 [module/toggl]
 type = custom/script
-exec = ./toggl.sh
+exec = ~/.config/polybar/toggl.sh
 format-prefix = "⧗ "
 format-underline = #eb4034
 interval = 2
